--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
 
     <title>My MPF - about</title>
-
+    <link rel="icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/unicons.css">
     <link rel="stylesheet" href="../css/owl.carousel.min.css">
